--- a/src/js/views/endview/endView.html
+++ b/src/js/views/endview/endView.html
@@ -1,2 +1,4 @@
 <div ng-controller="EndController">
+  <p>Resultat: {{score}}</p>
+  <md-button class="md-raised md-primary" ng-click="start()">Reiniciar questionari</md-button>
 </div>
