--- a/src/js/views/introview/introView.html
+++ b/src/js/views/introview/introView.html
@@ -1,3 +1,3 @@
 <div ng-controller="IntroController">
-  <ng-button></ng-button>
+  <md-button class="md-raised md-primary" ng-click="start()">Iniciar questionari</md-button>
 </div>
